[gd_scene load_steps=2 format=3 uid="uid://main_menu"]

[ext_resource type="Script" path="res://scripts/screens/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.06, 0.04, 0.1, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
theme_override_constants/separation = 24

[node name="Spacer1" type="Control" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "SCRATCH & RISE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="VBox"]
layout_mode = 2
text = "Kazi Kazan & Yuksel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="EnergyLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Enerji: 5 / 5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharmLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Charm: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
visible = false
text = "Enerji bekleniyor..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer3" type="Control" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
text = "OYNA"

[node name="Spacer4" type="Control" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="BottomButtons" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="CharmBtn" type="Button" parent="VBox/BottomButtons"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 50)
text = "Charm"

[node name="SynerjiBtn" type="Button" parent="VBox/BottomButtons"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 50)
text = "Sinerji"

[node name="KoleksiyonBtn" type="Button" parent="VBox/BottomButtons"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 50)
text = "Koleksiyon"

[node name="BasarimBtn" type="Button" parent="VBox/BottomButtons"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 50)
text = "Basarim"

[node name="AyarlarBtn" type="Button" parent="VBox/BottomButtons"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 50)
text = "Ayarlar"

[node name="Spacer5" type="Control" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[connection signal="pressed" from="VBox/PlayButton" to="." method="_on_play_pressed"]
